tests/error/alias_errors/undefined_type.err
Error: Variable not defined (at $FILE:5:0)
  | 
3 | 
4 | # Reference to a type that doesn't exist
5 | BadAlias = guppy.type_alias("NonExistentType")
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `NonExistentType` is not defined

Guppy compilation failed due to 1 previous error
